--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="icon" type="image/svg+xml" href="images/B0lBZUq6tNyG.jpeg">
     <link rel="apple-touch-icon" href="images/B0lBZUq6tNyG.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free join</title>
+    <title>Free join Me</title>
     <script type="module" crossorigin="" src="js/DtfD5YftPRDF.js"></script>
     <link rel="stylesheet" href="css/EwF1o4kRVDMJ.css">
   </head>
